# sonata-system

./: .clang-format  .gitattributes  .gitignore  CLA  README.md  SUMMARY.md  book.toml  capability_modification_reference_guide.md  cheriot_debug_module.core  flake.nix  ibex_demo_system.core  lychee.toml  open_hbmc.core  pulp_riscv_dbg.core  pyproject.toml  python-requirements.txt  sonata.core  sonata_system.core
.github/workflows/: ci.yml  mdbook.yml  site.yml
.reuse/: dep5
LICENSES/: LicenseRef-Xilinx.txt  SHL-0.51.txt
data/: ibex.svd  impl_timing.xdc  license_header.md  pc_and_gpo.gtkw  pins_sonata.xdc  pins_sonata_xl.xdc  rv_plic_cfg.hjson  sonata_udp.rdl  synth_timing.xdc  synth_timing_common.xdc  synth_timing_xl.xdc  top.rdl  top_config.toml  udp.rdl  xbar_ifetch.hjson  xbar_main.hjson  xbar_main.hjson.tpl  xbar_main_generated.hjson  xbar_peri.hjson  xbar_peri_generated.hjson
doc/: architecture.md
doc/architecture/: board.md  fpga.md  intro.md  software.md  sonata-hardware.md
doc/dev/: building-doc.md  developing.md  fpga-development.md  fpga-programming.md  ref-manual.md  release-procedure.md  simulation.md  sw-debug.md  sw-programming.md  toolchain-setup.md
doc/guide/: README.md  building-examples.md  fpga-update.md  getting-started.md  rp2040-update.md  sdcard-setup.md  toolchain-setup.md  updating-system.md
doc/ip/: adc.md  dm.md  dma.md  eth.md  gpio.md  i2c.md  ibex.md  pinmux.md  pinmux.md.tpl  plic.md  pwm.md  ram.md  revoker.md  spi.md  system_info.md  timer.md  uart.md  usb.md
dv/verilator/: sonata_system.cc  sonata_system.h  sonata_system.hh  sonata_system_main.cc  sonata_verilator_lint.vlt  top_verilator.sv
flow/: vivado_hook_opt_design_post.tcl  vivado_hook_opt_design_pre.tcl  vivado_hook_place_design_pre.tcl  vivado_hook_route_design_post.tcl  vivado_hook_route_design_pre.tcl  vivado_setup.tcl
nix/: bitstream.nix  codegen.nix  lint.nix  software.nix  tests.nix
rtl/bus/: sonata_xbar_main.sv  tl_ifetch_pkg.sv  tl_main_pkg.sv  tl_peri_pkg.sv  xbar_ifetch.core  xbar_ifetch.sv  xbar_main.core  xbar_main.sv  xbar_peri.core  xbar_peri.sv
rtl/fpga/: clkgen_sonata.sv  padring.sv  rst_ctrl.sv  top_artya7.sv  top_sonata.sv  ws281x_drv.sv
rtl/system/: debounce_step.sv  dm_top.sv  gpio.sv  gpio_array.sv  jtag_id_pkg.sv  padring.sv  pinmux.sv  pwm_fade.sv  pwm_wrapper.sv  rs485_ctrl.sv  rst_sync.sv  rv_timer.sv  sonata_pkg.sv  sonata_system.sv  spi_host.sv  spi_top.sv  sram.sv  uart.sv
sw/c/demo/hello_world/: CMakeLists.txt  main.c
sw/c/test/: CMakeLists.txt  memory_test.c  spi_test.c
sw/cheri/: CMakeLists.txt  README.md  cheriot_toolchain.cmake  gcc_toolchain.cmake  link.ld
sw/cheri/boot/: CMakeLists.txt  boot.S  boot_loader.cc  elf.h
sw/cheri/cap_modification_instructions_testing/: CMakeLists.txt  capability_modification_reference_guide.md  capability_modification_test_harness.cc
sw/cheri/checks/: CMakeLists.txt  capability_modification_test_harness.cc  cheri_sanity.cc  dma_check.cc  gpio_check.cc  hyperram_memset.S  hyperram_memset.h  hyperram_test.cc  lcd_check.cc  lowrisc_logo_native.h  memory_test.cc  new_test.cc  pcint_check.cc  pinmux_all_blocks_check.cc  pinmux_check.cc  pinmux_checker.cc  pinmux_checker.hh  revocation_test.cc  rgbled_test.cc  rs485_check.cc  rs485_spam_check.cc  sdraw_check.cc  spi_test.cc  system_info_check.cc  tag_test.S  test_runner.cc  uart_check.cc  uart_simexit_check.cc  usbdev_check.cc
sw/cheri/cheri_sanity/: Makefile  boot.cc
sw/cheri/common/: CMakeLists.txt  asm.hh  block_tests.cc  block_tests.hh  boot.S  console-utils.hh  console.hh  default-handlers.cc  filesys-utils.hh  flash-utils.hh  hyperram_exec_test.S  hyperram_perf_test.S  hyperram_perf_test.h  ostream.hh  platform-pinmux.hh  platform-pinmux.hh.tpl  platform-usbdev.hh  rpi-hat-eeprom.hh  rpi_hat_eeprom.hh  sdcard-utils.hh  sonata-devices.hh  sonata-peripherals.hh  sonata_plic.hh  timer-utils.hh  uart-utils.hh  usbdev-utils.hh
sw/cheri/error_leds/: CMakeLists.txt  error.S  irom.ldscript
sw/cheri/revocation_test/: .gitignore  Makefile  irom.ldscript
sw/cheri/sim_boot_stub/: Makefile  README.md  boot.S  boot_sram.S  link.ld
sw/cheri/spi_test/: spi_test.cc
sw/cheri/tests/: CMakeLists.txt  README.md  boot.S  cheri_sanity.cc  gpio_check.cc  hyperram_exec_test.S  hyperram_test.cc  hyperram_tests.hh  i2c_tests.hh  lorem_text.hh  pinmux_tests.hh  plic_tests.hh  pwm_tests.hh  revocation_test.cc  sdcard_tests.hh  spi_test.cc  spi_tests.hh  tag_test.S  test_runner.cc  test_runner.hh  uart_check.cc  uart_tests.hh  usbdev_tests.hh
sw/legacy/: .clang-format  CMakeLists.txt  gcc_toolchain.cmake  link.ld
sw/legacy/blank/: CMakeLists.txt
sw/legacy/boot/: CMakeLists.txt  boot.c
sw/legacy/common/: CMakeLists.txt  cpp_runtime.cc  crt0.S  gpio.c  gpio.h  i2c.c  i2c.h  log.hh  rv_plic.c  rv_plic.h  sonata_system.c  sonata_system.h  sonata_system_regs.h  spi.c  spi.h  timer.c  timer.h  uart.c  uart.h  usbdev.c  usbdev.h
sw/legacy/demo/: CMakeLists.txt
sw/legacy/demo/ethernet/: CMakeLists.txt  ksz8851.c  ksz8851.h  main.c
sw/legacy/demo/ethernet/lwip/: lwipopts.h  sys.c
sw/legacy/demo/ethernet/lwip/arch/: cc.h
sw/legacy/demo/hello_usb/: CMakeLists.txt  main.c
sw/legacy/demo/hello_world/: CMakeLists.txt  main.c
sw/legacy/demo/i2c_hat_id/: CMakeLists.txt  i2c_hat_id.c
sw/legacy/demo/lcd_st7735/: CMakeLists.txt  fbcon.c  fbcon.h  lcd.c  lcd.h  main.c  main.cc
sw/legacy/demo/lcd_st7735/coremark/: core_portme.c  ee_printf.c
sw/legacy/hal/: CMakeLists.txt  gpio.hh  platform.hh  pwm.hh  spi.hh  timer.hh  uart.hh
sw/legacy/hal/mmio/: gpio.hh  i2c.hh  mmio.hh  pwm.hh  sonata_system_platform.hh  spi.hh  timer.hh  uart.hh  usbdev.hh
sw/legacy/test/: CMakeLists.txt  heap_test.c  heap_test.cc  memory_test.c  memory_test.cc  spi_test.c
sw/legacy/timer_test/: CMakeLists.txt  timer_test.cc
util/: elf-to-uf2.sh  generate_plic.sh  generate_xbar.sh  interactive_helpers.tcl  load_new_software_on_fpga.sh  mdbook_wavejson.py  mem_helper.sh  reg_gen.sh  sonata-openocd-cfg.tcl  test_runner.py  top_gen.py  verilator-openocd-cfg.tcl
(+149 files in other folders)
