# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "sonata-system"
version = "0.0.0"
description = "A full micro-controller system utilizing the CHERIoT Ibex core, part of the Sunburst project funded by UKRI"
authors = []
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
packaging = "23.1"
anytree = "2.8.0"
hjson = "3.1.0"
mako = "1.1.6"
wheel = "0.41.2"
pyserial = "3.5"
mypy = "1.11.1"
ruff = "0.5.7"
edalize = { git = "https://github.com/lowRISC/edalize.git", tag = "v0.4.0"}
fusesoc = { git = "https://github.com/lowRISC/fusesoc.git", tag = "ot-0.4" }
pydantic = "^2.8.2"
toml = "0.10.2"
setuptools = "75.1.0"
gitpython = "^3.1.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
disable_error_code = ["import-untyped"]
exclude = [
  "^cheriot-rtos/",
  "^vendor/",
  "build/",
  "util/vendor.py",
]

[tool.ruff]
target-version = "py310"
line-length = 79
extend-exclude = [
  "vendor/",
  "util/vendor.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "PTH", "C4", "A", "RUF", "PERF"]
