# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "sonata-system"
version = "0.0.0"
description = "A full micro-controller system utilizing the CHERIoT Ibex core, part of the Sunburst project funded by UKRI"
requires-python = ">=3.10"
dependencies = [
    "anytree==2.8.0",
    "hjson==3.1.0",
    "mako>=1.3.6,<2",
    "wheel==0.41.2",
    "pyserial==3.5",
    "mypy==1.11.1",
    "ruff==0.5.7",
    "edalize@https://github.com/lowRISC/edalize/archive/refs/tags/v0.4.0.zip",
    "fusesoc@https://github.com/lowRISC/fusesoc/archive/refs/tags/ot-0.5.dev0.zip",
    "pydantic>=2.8.2,<3",
    "toml==0.10.2",
    "gitpython>=3.1.43,<4",
    "jinja2>=3.1.6,<4",
    "semantic-version>=2.10.0,<3",
    "mistletoe>=1.4.0,<2",
    "pycryptodome>=3.23.0,<4",
    "tabulate>=0.9.0,<0.10",
    "setuptools>=80.9.0",
    "packaging>=25.0",
    "rdl2ot>=0.3.0",
]

[tool.setuptools]
py-modules = []

[tool.mypy]
strict = true
disable_error_code = ["import-untyped"]
exclude = [
  "^cheriot-rtos/",
  "^vendor/",
  "build/",
  "util/vendor.py",
]

[tool.ruff]
target-version = "py310"
line-length = 79
extend-exclude = [
  "vendor/",
  "util/vendor.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "PTH", "C4", "A", "RUF", "PERF"]

